# agfr

./: .gitignore  README.md  agentic.db  pyproject.toml  requirements.txt  setup.py  setup_guide.md
agentic/: __init__.py  cli.py
agentic/agents/: __init__.py  calculator.yaml  data_analysis.yaml  market_research_shoes.yaml  nlp_summarizer.yaml  simple_search.yaml  tabulator.yaml  web_search.yaml
agentic/agents/local/: __init__.py  calculator_server.py  nlp_summarizer_server.py  sql_executor_server.py  tabulator_server.py  web_search_server.py
agentic/app/: __init__.py  main.py
agentic/app/static/: index.html
agentic/core/: __init__.py  composer.py  config.py  database.py  llm_client.py  mcp_client.py  orchestrator.py  planner.py  registry.py  types.py
agentic/modules/: __init__.py  search_engine.py
agentic/prompts/composer/: final_answer.md
agentic/prompts/intent/: classifier.md
agentic/prompts/planner/: plan_builder.md
agentic/workflows/: data_analysis.yaml  market_research_shoes.yaml  simple_search.yaml
scripts/: build.sh  dev_run.bat  dev_run.sh  setup.bat  setup.sh  test.sh  test_agents.py  test_mcp_agents.py
tests/: __init__.py  conftest.py  test_orchestrator.py  test_planner.py  test_registry.py
tests/integration/: test_full_workflow.py
